SUBDIRS =\
	libanalysis-devices \
	libprofiler \
	librules \
	libmisc

#lib_LIBRARIES = libhaptic.a
#
#libhaptic_a_LDFLAGS = -static
#
#libhaptic_a_SOURCES = \
#	$(top_builddir)/src/libanalysis-devices/*.o \
#	$(top_builddir)/src/libprofiler/*.o \
#	$(top_builddir)/src/libmisc/*.o \
#	$(top_builddir)/src/librules/*.o 
