lib_LIBRARIES = libanalysis-devices.a

libanalysis_devices_a_SOURCES = \
    analysis-devices.cpp \
    device-compare-images.cpp \
    fissionutils.cpp \
    analysis-devices-utils.cpp \
    fission_topology.cpp


INCLUDES = -I$(top_srcdir)/src/libprofiler -I$(top_srcdir)/src/libmisc -I$(top_srcdir)/src/librules

